# ResearchOps-Studio

./: .dockerignore  .env.example  .gitattributes  .gitignore  COMPLETE_SYSTEM_VERIFICATION.md  COMPLETE_VERIFICATION_REPORT.md  FINAL_VERIFICATION_REPORT.md  PART5_IMPLEMENTATION.md  PART6_IMPLEMENTATION.md  PART6_VERIFICATION.md  PART7_IMPLEMENTATION.md  PART8_IMPLEMENTATION.md  PART9_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README.md  SPEC.md  alembic.ini  claim_policy.yaml  package.json  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt  researchops-parts-5-8.patch  test_complete_system.py  test_connectors.py  test_workflow.py
backend/: Makefile  Procfile  alembic.ini  pyproject.toml  requirements.txt
backend/data/db/: init_db.py  migrate.py  session.py
backend/db/: init_db.py  session.py
backend/db/migrations/: 0001_tenant_and_audit.sql
backend/db/models/: __init__.py  audit_logs.py  auth_external_identities.py  auth_mfa_factors.py  auth_password_resets.py  auth_users.py  chat_messages.py  projects.py  run_checkpoints.py  run_sources.py  snippets.py  source_embeddings.py  sources.py
backend/db/services/: chat.py  truth.py
backend/deployment/: compose.override.yaml  compose.yaml
backend/deployment/docker/: api.Dockerfile  worker.Dockerfile
backend/examples/: valid_experiment_plan.json
backend/infra/: compose.yaml
backend/infra/docker/: api.Dockerfile  worker.Dockerfile
backend/libs/citations/: __init__.py
backend/libs/connectors/: __init__.py  arxiv.py  base.py  dedup.py  openalex.py  scientific_papers_mcp.py
backend/libs/core/: __init__.py  claim_verifier.py  constants.py  env.py  evaluation.py  evaluation_scorer.py  ragas_extractor.py  settings.py  tenancy.py
backend/libs/ingestion/: __init__.py  chunking.py  embeddings.py  pipeline.py  sanitize.py
backend/libs/llm/: __init__.py
backend/libs/observability/: __init__.py  langfuse_setup.py  logging_setup.py  middleware.py
backend/libs/retrieval/: __init__.py  search.py
backend/libs/search/: tavily.py
backend/scripts/: setup.ps1
backend/scripts/verification/: test_workflow.py
backend/services/api/: app.py  deps.py  main.py
backend/services/orchestrator/: cancellation.py  graph.py  (+9 more)
backend/tests/: conftest.py  test_db_fixes.py  test_embed_pool_concurrent.py  test_embed_worker_pool.py  test_evidence_packer_parallel.py  test_rate_limiter_threadsafe.py  test_retriever_embed_pool.py  test_retriever_mcp_parallel.py
(+551 files in other folders)
