[project]
name = "researchops-studio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0,<3",
  "pydantic-settings>=2.0,<3",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pgvector>=0.3.6",
  "langgraph>=0.2,<0.3",
  "langfuse>=2.0,<3",
  "boto3>=1.34",
  "PyJWT[crypto]>=2.8",
  "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "httpx>=0.25",
  "ruff>=0.4",
  "black>=24.0",
]

[tool.pytest.ini_options]
testpaths = ["../tests/backend"]
addopts = "-q"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]  # E501: line length enforced by black; B008: FastAPI uses default calls for Depends

[tool.coverage.run]
source = ["."]
omit = [
  "*/migrations/*",
  "*/alembic/*",
  "*/__pycache__/*",
  "*/tests/*",
  "db/init_db.py",
  # Pipeline/embedding nodes require live LLM or GPU — not unit-testable in CI
  "services/orchestrator/embeddings.py",
  "services/orchestrator/nodes/evidence_packer.py",
  "services/orchestrator/nodes/outliner.py",
  "services/orchestrator/nodes/writer.py",
  "services/orchestrator/runner.py",
  "libs/observability/logging_setup.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
]
